Added in arrangement edits

--- a/tj_watt_tracker.html
+++ b/tj_watt_tracker.html
@@ -48,7 +48,7 @@
     <img src="images/tj_watt_1.png" alt="Watt pic 2" width="200">
     <img src="images/tj_watt_2.png" alt="Watt pic 3" width="200">
   </div>
-  <p><strong>3 Years · $123 Million</strong></p>
+  <p><strong>3 Years - $123 Million</strong></p>
   <p>Average Annual Salary: <strong>$41M</strong></p>
   <p>Sacks Per Season Breakdown</p>
 
@@ -68,9 +68,9 @@
 
 <canvas id="sackChart" width="400" height="200"></canvas>
 
-<!-- Highlight Reel -->
+<!-- TJ Watt contract breakdown Reel -->
 <iframe width="560" height="315"
-  src="https://www.youtube.com/embed/YIwneo0xSe0"
+  src="https://www.youtube.com/embed/aHSlJFFmSgc"
   title="T.J. Watt 2024 Highlights" frameborder="0"
   allowfullscreen
   style="margin-top: 40px;">
