changed text so users know to scroll down to the graph

--- a/tj_watt_tracker.html
+++ b/tj_watt_tracker.html
@@ -51,7 +51,7 @@
 </iframe>
   <p><strong>3 Years - $123 Million</strong></p>
   <p>Average Annual Salary: <strong>$41M</strong></p>
-  <p>Sacks Per Season Breakdown</p>
+  <p>For Sacks Per Season Graph Breakdown Scroll Down</p>
 
   <h2 id="earnings">Career Earnings: $0.00 Press Start You Little Pocket Watchers!!!</h2>
 
